[package]
name = "hamlet"
version = "0.2.1"
authors = [
    "Wim Looman <wim@nemo157.com>",
    "critiqjo <john.ch.fr@gmail.com>"
]
description = "Html token definitions for stream processing"

readme = "README.md"
homepage = "https://nemo157.com/hamlet"
repository = "https://github.com/Nemo157/hamlet"
documentation = "https://nemo157.com/hamlet/docs/0.2.1/hamlet"

keywords = ["html", "hamlet"]

license = "MIT/Apache-2.0"

[dependencies]
